--- a/Keras GPU Test Code.ipynb
+++ b/Keras GPU Test Code.ipynb
@@ -2,19 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "f07ea0a3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'keras'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-b880362906bd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# 분류 DNN 모델 구현 ########################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlayers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/15\n",
+      "480/480 [==============================] - 2s 2ms/step - loss: 0.7093 - accuracy: 0.7910 - val_loss: 0.1822 - val_accuracy: 0.9467\n",
+      "Epoch 2/15\n",
+      "480/480 [==============================] - 1s 1ms/step - loss: 0.1614 - accuracy: 0.9534 - val_loss: 0.1386 - val_accuracy: 0.9587\n",
+      "Epoch 3/15\n",
+      "480/480 [==============================] - 1s 1ms/step - loss: 0.1163 - accuracy: 0.9663 - val_loss: 0.1057 - val_accuracy: 0.9682\n",
+      "Epoch 4/15\n",
+      "480/480 [==============================] - 1s 1ms/step - loss: 0.0797 - accuracy: 0.9753 - val_loss: 0.0980 - val_accuracy: 0.9714\n",
+      "Epoch 5/15\n",
+      "480/480 [==============================] - 1s 1ms/step - loss: 0.0657 - accuracy: 0.9798 - val_loss: 0.0940 - val_accuracy: 0.9708\n",
+      "Epoch 6/15\n",
+      "480/480 [==============================] - 1s 1ms/step - loss: 0.0513 - accuracy: 0.9845 - val_loss: 0.0954 - val_accuracy: 0.9717\n",
+      "Epoch 7/15\n",
+      "480/480 [==============================] - 1s 1ms/step - loss: 0.0422 - accuracy: 0.9872 - val_loss: 0.0953 - val_accuracy: 0.9737\n",
+      "Epoch 8/15\n",
+      "480/480 [==============================] - 1s 1ms/step - loss: 0.0321 - accuracy: 0.9897 - val_loss: 0.0954 - val_accuracy: 0.9726\n",
+      "Epoch 9/15\n",
+      "480/480 [==============================] - 1s 1ms/step - loss: 0.0265 - accuracy: 0.9917 - val_loss: 0.0917 - val_accuracy: 0.9741\n",
+      "Epoch 10/15\n",
+      "480/480 [==============================] - 1s 1ms/step - loss: 0.0216 - accuracy: 0.9942 - val_loss: 0.0886 - val_accuracy: 0.9764\n",
+      "Epoch 11/15\n",
+      "480/480 [==============================] - 1s 1ms/step - loss: 0.0191 - accuracy: 0.9944 - val_loss: 0.1074 - val_accuracy: 0.9732\n",
+      "Epoch 12/15\n",
+      "480/480 [==============================] - 1s 1ms/step - loss: 0.0145 - accuracy: 0.9961 - val_loss: 0.0985 - val_accuracy: 0.9747\n",
+      "Epoch 13/15\n",
+      "480/480 [==============================] - 1s 1ms/step - loss: 0.0138 - accuracy: 0.9954 - val_loss: 0.1048 - val_accuracy: 0.9755\n",
+      "Epoch 14/15\n",
+      "480/480 [==============================] - 1s 1ms/step - loss: 0.0138 - accuracy: 0.9960 - val_loss: 0.1008 - val_accuracy: 0.9760\n",
+      "Epoch 15/15\n",
+      "480/480 [==============================] - 1s 1ms/step - loss: 0.0098 - accuracy: 0.9973 - val_loss: 0.1185 - val_accuracy: 0.9730\n",
+      "100/100 [==============================] - 0s 912us/step - loss: 0.1099 - accuracy: 0.9725\n",
+      "Test Loss and Accuracy -> [0.1099129170179367, 0.9725000262260437]\n"
      ]
     }
    ],
