RNN, LSTM and so on

--- a/DL/keras/2.2 신경망을 위한 데이터 표현.ipynb
+++ b/DL/keras/2.2 신경망을 위한 데이터 표현.ipynb
@@ -600,12 +600,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5638e107",
    "metadata": {},
    "source": [
-    "![sequential.png](./images/2-2-10-sequential.png)"
+    "![sequential.png](../images/2-2-10-sequential.png)"
    ]
   },
   {
@@ -629,7 +628,7 @@
    "id": "2943a7b0",
    "metadata": {},
    "source": [
-    "![image.png](./images/2-2-11-image.png)"
+    "![image.png](../images/2-2-11-image.png)"
    ]
   },
   {
