--- a/DL/keras/2.1 신경망과의 첫 만남.ipynb
+++ b/DL/keras/2.1 신경망과의 첫 만남.ipynb
@@ -322,21 +322,21 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "469/469 [==============================] - 1s 983us/step - loss: 0.4056 - accuracy: 0.8807\n",
+      "469/469 [==============================] - 1s 1ms/step - loss: 0.4060 - accuracy: 0.8784\n",
       "Epoch 2/5\n",
-      "469/469 [==============================] - 0s 948us/step - loss: 0.0994 - accuracy: 0.9702\n",
+      "469/469 [==============================] - 1s 1ms/step - loss: 0.0994 - accuracy: 0.9709\n",
       "Epoch 3/5\n",
-      "469/469 [==============================] - 0s 933us/step - loss: 0.0584 - accuracy: 0.9817\n",
+      "469/469 [==============================] - 1s 1ms/step - loss: 0.0601 - accuracy: 0.9817\n",
       "Epoch 4/5\n",
-      "469/469 [==============================] - 0s 957us/step - loss: 0.0430 - accuracy: 0.9868\n",
+      "469/469 [==============================] - 1s 1ms/step - loss: 0.0422 - accuracy: 0.9876\n",
       "Epoch 5/5\n",
-      "469/469 [==============================] - 0s 952us/step - loss: 0.0311 - accuracy: 0.9904\n"
+      "469/469 [==============================] - 1s 1ms/step - loss: 0.0304 - accuracy: 0.9908\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f1bab223b20>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f03ab8f0040>"
       ]
      },
      "execution_count": 12,
@@ -372,7 +372,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 0s 679us/step - loss: 0.0662 - accuracy: 0.9820\n"
+      "313/313 [==============================] - 0s 924us/step - loss: 0.0645 - accuracy: 0.9810\n"
      ]
     }
    ],
@@ -390,7 +390,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_acc: 0.9819999933242798\n"
+      "test_acc: 0.9810000061988831\n"
      ]
     }
    ],
@@ -436,22 +436,22 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "469/469 [==============================] - 1s 948us/step - loss: 0.4049 - accuracy: 0.8806\n",
+      "469/469 [==============================] - 1s 1ms/step - loss: 0.4092 - accuracy: 0.8780\n",
       "Epoch 2/5\n",
-      "469/469 [==============================] - 0s 962us/step - loss: 0.1004 - accuracy: 0.9691\n",
+      "469/469 [==============================] - 1s 1ms/step - loss: 0.1000 - accuracy: 0.9705\n",
       "Epoch 3/5\n",
-      "469/469 [==============================] - 0s 954us/step - loss: 0.0604 - accuracy: 0.9816\n",
+      "469/469 [==============================] - 1s 1ms/step - loss: 0.0587 - accuracy: 0.9820\n",
       "Epoch 4/5\n",
-      "469/469 [==============================] - 0s 961us/step - loss: 0.0428 - accuracy: 0.9872\n",
+      "469/469 [==============================] - 1s 1ms/step - loss: 0.0415 - accuracy: 0.9871\n",
       "Epoch 5/5\n",
-      "469/469 [==============================] - 0s 931us/step - loss: 0.0324 - accuracy: 0.9905\n",
-      "313/313 [==============================] - 0s 673us/step - loss: 0.0588 - accuracy: 0.9820\n"
+      "469/469 [==============================] - 1s 1ms/step - loss: 0.0300 - accuracy: 0.9910\n",
+      "313/313 [==============================] - 0s 952us/step - loss: 0.0629 - accuracy: 0.9820\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.058793846517801285, 0.9819999933242798]"
+       "[0.06285513937473297, 0.9819999933242798]"
       ]
      },
      "execution_count": 15,
