--- a/DL/keras/6.2 순환 신경망 이해하기.ipynb
+++ b/DL/keras/6.2 순환 신경망 이해하기.ipynb
@@ -21,7 +21,7 @@
     "session = tf.compat.v1.Session(config=config)\n",
     "tf.compat.v1.keras.backend.set_session(session)\n",
     "\n",
-    "tf.compat.v1.disable_eager_execution()"
+    "#tf.compat.v1.disable_eager_execution()"
    ]
   },
   {
