--- a/Keras GPU Test Code.ipynb
+++ b/Keras GPU Test Code.ipynb
@@ -11,37 +11,37 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      "480/480 [==============================] - 2s 2ms/step - loss: 0.7093 - accuracy: 0.7910 - val_loss: 0.1822 - val_accuracy: 0.9467\n",
+      "480/480 [==============================] - 1s 1ms/step - loss: 0.6740 - accuracy: 0.8147 - val_loss: 0.1918 - val_accuracy: 0.9457\n",
       "Epoch 2/15\n",
-      "480/480 [==============================] - 1s 1ms/step - loss: 0.1614 - accuracy: 0.9534 - val_loss: 0.1386 - val_accuracy: 0.9587\n",
+      "480/480 [==============================] - 0s 912us/step - loss: 0.1754 - accuracy: 0.9493 - val_loss: 0.1296 - val_accuracy: 0.9632\n",
       "Epoch 3/15\n",
-      "480/480 [==============================] - 1s 1ms/step - loss: 0.1163 - accuracy: 0.9663 - val_loss: 0.1057 - val_accuracy: 0.9682\n",
+      "480/480 [==============================] - 0s 906us/step - loss: 0.1133 - accuracy: 0.9671 - val_loss: 0.1140 - val_accuracy: 0.9654\n",
       "Epoch 4/15\n",
-      "480/480 [==============================] - 1s 1ms/step - loss: 0.0797 - accuracy: 0.9753 - val_loss: 0.0980 - val_accuracy: 0.9714\n",
+      "480/480 [==============================] - 0s 997us/step - loss: 0.0854 - accuracy: 0.9744 - val_loss: 0.1006 - val_accuracy: 0.9705\n",
       "Epoch 5/15\n",
-      "480/480 [==============================] - 1s 1ms/step - loss: 0.0657 - accuracy: 0.9798 - val_loss: 0.0940 - val_accuracy: 0.9708\n",
+      "480/480 [==============================] - 0s 854us/step - loss: 0.0673 - accuracy: 0.9804 - val_loss: 0.0953 - val_accuracy: 0.9721\n",
       "Epoch 6/15\n",
-      "480/480 [==============================] - 1s 1ms/step - loss: 0.0513 - accuracy: 0.9845 - val_loss: 0.0954 - val_accuracy: 0.9717\n",
+      "480/480 [==============================] - 0s 900us/step - loss: 0.0574 - accuracy: 0.9823 - val_loss: 0.0955 - val_accuracy: 0.9722\n",
       "Epoch 7/15\n",
-      "480/480 [==============================] - 1s 1ms/step - loss: 0.0422 - accuracy: 0.9872 - val_loss: 0.0953 - val_accuracy: 0.9737\n",
+      "480/480 [==============================] - 0s 891us/step - loss: 0.0447 - accuracy: 0.9873 - val_loss: 0.0967 - val_accuracy: 0.9718\n",
       "Epoch 8/15\n",
-      "480/480 [==============================] - 1s 1ms/step - loss: 0.0321 - accuracy: 0.9897 - val_loss: 0.0954 - val_accuracy: 0.9726\n",
+      "480/480 [==============================] - 0s 1ms/step - loss: 0.0357 - accuracy: 0.9894 - val_loss: 0.0984 - val_accuracy: 0.9728\n",
       "Epoch 9/15\n",
-      "480/480 [==============================] - 1s 1ms/step - loss: 0.0265 - accuracy: 0.9917 - val_loss: 0.0917 - val_accuracy: 0.9741\n",
+      "480/480 [==============================] - 0s 868us/step - loss: 0.0302 - accuracy: 0.9910 - val_loss: 0.0986 - val_accuracy: 0.9744\n",
       "Epoch 10/15\n",
-      "480/480 [==============================] - 1s 1ms/step - loss: 0.0216 - accuracy: 0.9942 - val_loss: 0.0886 - val_accuracy: 0.9764\n",
+      "480/480 [==============================] - 0s 879us/step - loss: 0.0270 - accuracy: 0.9918 - val_loss: 0.0947 - val_accuracy: 0.9743\n",
       "Epoch 11/15\n",
-      "480/480 [==============================] - 1s 1ms/step - loss: 0.0191 - accuracy: 0.9944 - val_loss: 0.1074 - val_accuracy: 0.9732\n",
+      "480/480 [==============================] - 0s 915us/step - loss: 0.0203 - accuracy: 0.9941 - val_loss: 0.1084 - val_accuracy: 0.9720\n",
       "Epoch 12/15\n",
-      "480/480 [==============================] - 1s 1ms/step - loss: 0.0145 - accuracy: 0.9961 - val_loss: 0.0985 - val_accuracy: 0.9747\n",
+      "480/480 [==============================] - 0s 993us/step - loss: 0.0196 - accuracy: 0.9947 - val_loss: 0.0988 - val_accuracy: 0.9749\n",
       "Epoch 13/15\n",
-      "480/480 [==============================] - 1s 1ms/step - loss: 0.0138 - accuracy: 0.9954 - val_loss: 0.1048 - val_accuracy: 0.9755\n",
+      "480/480 [==============================] - 0s 972us/step - loss: 0.0155 - accuracy: 0.9953 - val_loss: 0.1130 - val_accuracy: 0.9726\n",
       "Epoch 14/15\n",
-      "480/480 [==============================] - 1s 1ms/step - loss: 0.0138 - accuracy: 0.9960 - val_loss: 0.1008 - val_accuracy: 0.9760\n",
+      "480/480 [==============================] - 0s 855us/step - loss: 0.0145 - accuracy: 0.9955 - val_loss: 0.1018 - val_accuracy: 0.9779\n",
       "Epoch 15/15\n",
-      "480/480 [==============================] - 1s 1ms/step - loss: 0.0098 - accuracy: 0.9973 - val_loss: 0.1185 - val_accuracy: 0.9730\n",
-      "100/100 [==============================] - 0s 912us/step - loss: 0.1099 - accuracy: 0.9725\n",
-      "Test Loss and Accuracy -> [0.1099129170179367, 0.9725000262260437]\n"
+      "480/480 [==============================] - 0s 911us/step - loss: 0.0109 - accuracy: 0.9974 - val_loss: 0.1198 - val_accuracy: 0.9727\n",
+      "100/100 [==============================] - 0s 596us/step - loss: 0.1129 - accuracy: 0.9721\n",
+      "Test Loss and Accuracy -> [0.11291385442018509, 0.972100019454956]\n"
      ]
     }
    ],
@@ -91,14 +91,6 @@
     "performace_test = model.evaluate(X_test, y_test, batch_size=100)\n",
     "print('Test Loss and Accuracy ->', performace_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "858334d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
