--- a/NLP/Pytorch/5.5 TF-IDF 특징 추출하기.ipynb
+++ b/NLP/Pytorch/5.5 TF-IDF 특징 추출하기.ipynb
@@ -8,7 +8,7 @@
     "본격적으로 특징 벡터를 만들기에 앞서 텍스트 마이닝에서 중요하게 사용되는 TF-IDF를 사용하여 특징을 추출해보겠습니다\n",
     "\n",
     "<br></br>\n",
-    "$TF-IDF(w,d) = \\frac{TF(w,d)}{DF(w)}$\n",
+    "$$TF-IDF(w,d) = \\frac{TF(w,d)}{DF(w)}$$\n",
     "<br></br>\n",
     "\n",
     "TF-IDF는 출현 빈도를 사용하여 어떤 단어 w가 문서 d내에서 얼마나 중요한지 나타내는 수치입니다. 이 수치가 높을수록 w는 d를 대표하는 성질을 띠게 된다고 볼 수도 있습니다. TF는 term frequency의 약어로, 단어의 문서내 출현한 횟수를 의미합니다. 그리고 IDF는 inverse document frequency의 약어로, 그 단어가 출현한 문서의 숫자의 역수를 의미합니다.\n",
